2010-04-07  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Components.Docking/DockContainer.cs: Partial fix
	  dor bug 578531 - MD 2.2.1 Splitters only work if you move
	  reeaaallllyyyy slooowwwllly on OSX.

2010-04-07  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.addin.xml:
	* MonoDevelop.Ide.Commands/SearchCommands.cs: Added use
	  selection for find/replace commands (for mac specific
	  behavior).

2010-04-06  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.CodeCompletion/CompletionListWindow.cs: Fix
	  spelling, and make fade-in quicker.

2010-04-06  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Components/GtkUtil.cs: Properly free the
	  allocated event.

2010-04-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeCompletion/ListWidget.cs:
	* MonoDevelop.Ide.CodeCompletion/CompletionListWindow.cs:
	  Handled possible null reference.

2010-04-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeCompletion/CompletionListWindow.cs:
	  worked on 'Bug 593232 - Intense flickering in OSX with
	  help/autocompletion on OSX'.

2010-04-01  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeTemplates/CodeTemplate.cs: Implemented
	  'Bug 591436 - Cannot add the "$" symbol to the custom
	  template text'.

2010-04-01  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide/IdePreferences.cs: Changed message bubble
	  property keys.

	* gtk-gui/objects.xml: 

2010-03-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide/DesktopService.cs:
	* MonoDevelop.Ide.Desktop/PlatformService.cs: Moved external
	  console creation to the platform service.

2010-03-29  Levi Bard  <levi@unity3d.com>

	* MonoDevelop.Ide/IdeStartup.cs: Remove debug logging.

2010-03-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Pads/DefaultMonitorPad.cs: Fixed bug
	  #591785 - Unable to cast object of type 'Gtk.Alignment' to
	  type 'Gtk.Image'.

2010-03-27  Michael Hutchinson  <mhutchinson@novell.com>
